--- a/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_object_detection_engine/config/parameters.yaml
+++ b/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_object_detection_engine/config/parameters.yaml
@@ -1,12 +1,12 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright (C) 2025 Intel Corporation
 # rvc_object_detection engine specific:
-    plugin_name: "RVC_AI::OIInference"
+    plugin_name: "RVC_AI::YoloxInference"
     publish_yolo_images: true
-    model_name: "yolo_nano"
+    model_name: "yoloxorange"
     #Ordered array of strings: cube = 0, bolt = 1, etc, this one matched yolo_rvc_4class 
-    #class_name_array: [ 'cube', 'bolt', 'gear', 'nut' ]
-    class_name_array: [ 'bolt', 'gear', 'nut', 'cube' ]
+    class_name_array: [ 'cube', 'gear', 'nut', 'bolt' ]
+    #class_name_array: [ 'bolt', 'gear', 'nut', 'cube' ]
     rvc_use_case_binaries: "rvc_use_case_binaries"
 
 # plugins specific:
