--- a/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/debian/control
+++ b/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/debian/control
@@ -1,4 +1,4 @@
-Source: ros-humble-openvino-inference-plugin
+Source: ros-humble-yolox-inference-plugin
 Section: misc
 Priority: optional
 Maintainer: Intel Robotics Team <robotics@intel.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.0.0), libopencv-dev, openvino-libraries-dev, ros-
 Homepage: 
 Standards-Version: 3.9.2
 
-Package: ros-humble-openvino-inference-plugin
+Package: ros-humble-yolox-inference-plugin
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libopencv-dev, openvino-libraries-dev, ros-humble-pluginlib, ros-humble-rvc-ai-interface, ros-humble-rvc-vision-messages, ros-humble-std-msgs
-Description: RVC AI interface-based Plugin implementing yolo V5, v6 and V8 using openvino inferencing
+Description: RVC AI interface-based Plugin implementing yolox using openvino inferencing
