--- a/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/package.xml
+++ b/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>yolox_inference_plugin</name>
   <version>2.0.0</version>
-  <description>RVC AI interface-based Plugin implementing yolo V5, v6 and V8 using openvino inferencing </description>
+  <description>RVC AI interface-based Plugin implementing yolox using openvino inferencing </description>
   <maintainer email="robotics@intel.com">Intel Robotics Team</maintainer>
   <license>Rapid Prototype License</license>
 
