--- a/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/package.xml
+++ b/robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_object_detection/rvc_ai_plugins/yolox_inference_plugin/package.xml
@@ -5,7 +5,7 @@
   <version>2.0.0</version>
   <description>RVC AI interface-based Plugin implementing yolox using openvino inferencing </description>
   <maintainer email="robotics@intel.com">Intel Robotics Team</maintainer>
-  <license>Rapid Prototype License</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
